--- a/coffee1-gh-pages/static/css/style.css
+++ b/coffee1-gh-pages/static/css/style.css
@@ -8134,7 +8134,7 @@ Styles untuk map
     background: #c49b63; }
     .table .thead-primary tr th {
       padding: 20px 10px;
-      color: #fff !important;
+      color: #0b0b0b !important;
       border: 1px solid transparent !important; }
   .table tbody tr td {
     text-align: center !important;
