remove cartCount after placing order

--- a/coffee1-gh-pages/templates/checkout.html
+++ b/coffee1-gh-pages/templates/checkout.html
@@ -238,6 +238,8 @@
   console.log('cartItems: ', cartItems);
   document.querySelector('#checkout-form').addEventListener('submit', function(event) {
     localStorage.removeItem('cartItems');
+    // remove cartCount from localStorage
+    localStorage.removeItem('cartCount');
 });
   // when 'pickup' is selected, remove the delivery fee
     const deliveryPriceElement = document.querySelector('#cart-delivery');
