added validator for placing order form

--- a/coffee1-gh-pages/static/css/style.css
+++ b/coffee1-gh-pages/static/css/style.css
@@ -246,6 +246,10 @@ input[type="time"],
 input[type="datetime-local"],
 input[type="month"] {
   -webkit-appearance: listbox; }
+input.invalid {
+    border: 1px solid red;
+}
+
 
 textarea {
   overflow: auto;
