--- a/coffee1-gh-pages/templates/menu.html
+++ b/coffee1-gh-pages/templates/menu.html
@@ -113,9 +113,13 @@
 				<div class="d-md-flex">
 					<div class="form-group">
 						<select class="form-control" name="coffee[]">
-							<option value="classic">Classic</option>
-							<option value="cappuccino">Mocha</option>
-							<option value="latte">Latte</option>
+							<option value="original">Original</option>
+							<option value="milktea">Milk Tea</option>
+							<option value="hazelnuts">Hazelnuts</option>
+							<option value="caramel">Caramel</option>
+							<option value="mocha">Mocha</option>
+							<option value="rich">Rich</option>
+
 						</select>
 					</div>
 					<div class="form-group ml-md-4">
